objects/StoreMaster__c.object
<CustomObject>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Brand_Id</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChainId__c</fullName>
        <label>ChainId</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chain_Name__c</fullName>
        <label>Chain Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Y or N</description>
        <label>Active</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StoreNumber__c</fullName>
        <externalId>true</externalId>
        <label>Store Number</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StoreUniqueId__c</fullName>
        <externalId>true</externalId>
        <label>StoreUniqueId</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Store Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>StoreUniqueId__c</columns>
        <columns>Brand__c</columns>
        <columns>Status__c</columns>
        <columns>Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SM-{0}</displayFormat>
        <label>Store Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>